--- a/01.IntroALaWeb/03.TravelAgencyCSS/index.html
+++ b/01.IntroALaWeb/03.TravelAgencyCSS/index.html
@@ -8,8 +8,13 @@
     <meta name="description" content="Somos una agencia de viajes moderna">
     <meta name="keywords" content="viajes, promociones, vuelos, buenos aires, egipto, montreal">
     <title>Palo Alto: Agencia de Viajes</title>
+    <!-- Estoy usando fuentes externas de Google -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap" rel="stylesheet">
+    <!-- Termino de usar las fuentes de Google -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+
 </head>
 
 <body>
