--- a/01.IntroALaWeb/03.TravelAgencyCSS/index.html
+++ b/01.IntroALaWeb/03.TravelAgencyCSS/index.html
@@ -21,6 +21,10 @@
 
     <!-- START HEADER SECTION -->
     <header>
+        <div class="logo">
+            <img src="img/travel-agency-logo.png"
+            alt="logotipo_agencia">
+        </div>
         <nav class="" id="home_navbar">
             <ul>
                 <li><a href="">Inicio</a></li>
@@ -34,8 +38,6 @@
     <!------- START HOME SECTION ----->
     <section class="home_section">
         <h1 style="color:red;">Viajar con nosotros es increíble</h1>
-        <img src="https://image.freepik.com/vector-gratis/agencia-viajes-diseno-logotipo-avion_23-2148620758.jpg"
-            alt="logotipo_agencia">
     </section>
     <!------ END HOME SECTION    -->
 
