--- a/01.IntroALaWeb/03.TravelAgencyCSS/index.html
+++ b/01.IntroALaWeb/03.TravelAgencyCSS/index.html
@@ -35,6 +35,11 @@
     </header>
     <!-- END HEADER SECTION -->
 
+    <!-- START HERO SECTION -->
+    <div id="hero"></div>
+    <!-- END HERO SECTION -->
+
+<main>
     <!------- START HOME SECTION ----->
     <section class="home_section">
         <h1 style="color:red;">Viajar con nosotros es increíble</h1>
@@ -149,6 +154,7 @@
 
         <br />
     </section>
+</main>
     <!-------- END ITINERARY SECTION ------------>
 </body>
 
