float y position fixed de whatsapp

--- a/01.IntroALaWeb/03.TravelAgencyCSS/index.html
+++ b/01.IntroALaWeb/03.TravelAgencyCSS/index.html
@@ -50,12 +50,21 @@
     <section class="destiny_section" id="destiny">
         <br />
         <h2>Contamos con los siguientes paquetes</h2>
-        <h3>Buenos Aires a su medida<em><br /> (Incluye 8 días, Un recorrido turístico, 465USD)</em></h3>
-        <img src="http://www.econsolid.com/k/img/megas/buenos-aires.png " alt="Image_Buenos_Aires">
-        <h3>Egipto Sensacional<em><br /> (14 y 12 noches, desde 999 USD) </em></h3>
-        <img src="http://www.econsolid.com/k/img/megas/egipto.jpg  " alt="Imagen_Egipto_Sensacional">
-        <h3>Montreal<em><br /> (5 días y 4 noches 609 USD) </em></h3>
-        <img src="http://www.econsolid.com/k/img/megas/toronto2.jpg   " alt="Imagen_Montreal">
+        <article>
+            <h3>Buenos Aires a su medida<br /> <span>(Incluye 8 días, Un recorrido turístico, 465USD)</span></h3>
+            <img src="http://www.econsolid.com/k/img/megas/buenos-aires.png " alt="Image_Buenos_Aires">
+        </article>
+
+        <article>
+            <h3>Egipto Sensacional<br /> <span>(14 y 12 noches, desde 999 USD)</span> </h3>
+            <img src="http://www.econsolid.com/k/img/megas/egipto.jpg  " alt="Imagen_Egipto_Sensacional">
+        </article>
+
+        <article>
+            <h3>Montreal<br /> <span>(5 días y 4 noches 609 USD)</span> </h3>
+            <img src="http://www.econsolid.com/k/img/megas/toronto2.jpg   " alt="Imagen_Montreal">
+        </article>
+
         <br />
         <a href="#home_navbar">Regresar al inicio</a>
     </section>
@@ -156,6 +165,14 @@
     </section>
 </main>
     <!-------- END ITINERARY SECTION ------------>
+
+    <!-------- BEGIN WHATSAPP SECTION ------------>
+    <a class="whatsapp" href="https://api.whatsapp.com/send?phone=52999999999&text=" target="_blank">
+        <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c543.png" alt="Contactame Via WhatsApp">
+    </a>
+    
+    <!-------- END WHATSAPP SECTION ------------>
+
 </body>
 
 </html>
