position absolute y relative en imagen de egipto

--- a/01.IntroALaWeb/03.TravelAgencyCSS/index.html
+++ b/01.IntroALaWeb/03.TravelAgencyCSS/index.html
@@ -96,10 +96,13 @@
 
         <h4>Egipto Sensacional</h4>
         <a href="https://tourspatadepalo.econsolid.com/catalogo-destinos.php?viaje=20112">
-            <img
-                src="https://one.cdnmega.com/images/viajes/covers/egipto-sensacional-y-estambul-promo-2020-844x474_5dc60b66b2373.webp"
-                alt="Buenos_Aires_imagen"
-            >
+            <div class="destiny-img">
+                <img
+                    src="https://one.cdnmega.com/images/viajes/covers/egipto-sensacional-y-estambul-promo-2020-844x474_5dc60b66b2373.webp"
+                    alt="Egipto"
+                >
+                <span class="oferton">¡¡ OFERTON !! </span>
+            </div>
         </a>
         <h5><strong>DIA 1. MÉXICO - ESTAMBUL </strong></h5>
         <p>Cita en el aeropuerto de la Ciudad de México para abordar vuelo con destino a Estambul. Noche a bordo..</p>
