codigo terminado de la maquetación con flexbox

--- a/01.IntroALaWeb/04.PracticaFlexbox/concept landinpage/index.html
+++ b/01.IntroALaWeb/04.PracticaFlexbox/concept landinpage/index.html
@@ -36,7 +36,7 @@
              <section id="hero">
                 <div class="hero-text">
                     <h1>Industría 4.0</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod saepe eum explicabo fuga, tempora ducimus autem! Iste est dolores eaque!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, reiciendis? Nulla veniam id quod quo enim sed est itaque dignissimos placeat velit quia, aut iure in perferendis fuga laboriosam recusandae delectus aliquid. Ipsam labore optio eaque officiis ducimus, quis consequuntur eius, est rerum, distinctio officia commodi deserunt error aspernatur fuga?</p>
                     <button>Explorar</button>
                 </div>
                 <div class="hero-image">
@@ -46,7 +46,7 @@
 
              <section id="sub-content">
                     <div class="container-left">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur aperiam iure porro quisquam vitae est.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia quos et perferendis id ea quibusdam harum perspiciatis eius reiciendis velit sint alias doloremque, qui, vitae commodi, sit tenetur laudantium voluptatum quo consequuntur iste ducimus? Nisi delectus consequatur vel, laboriosam a eos veritatis reiciendis alias ipsam eveniet nulla voluptatem quas distinctio.</p>
                         <button>Navegar</button>
                         <img src="img/cards.jpg" alt="computadora dos">
                     </div>
@@ -54,8 +54,8 @@
                     <div class="container-right">
                         <div class="social-icons">
                             <img src="img/facebook.png" alt="logo facebook">
-                            <img src="img/instagram.png" alt="logo">
-                            <img src="img/google.png" alt="">
+                            <img src="img/instagram.png" alt="logo instagram">
+                            <img src="img/google.png" alt="logo google+">
                         </div>
                     </div>
              </section>
