--- a/02.KataJs/12.EjerciciosDom/calculadora/index.html
+++ b/02.KataJs/12.EjerciciosDom/calculadora/index.html
@@ -40,9 +40,9 @@
             <br>
             <br>
         
-            <button  class="btn btn-secondary" type="button" onclick="sumar()" >Depositar</button> <!-- SUMA CALL TO ACTION -->            
-            <button  class="btn btn-secondary" type="button" onclick="restar()">Consultar saldo</button><!-- LEER EL SALDO ACTUAL -->
-            <button  class="btn btn-secondary" type="button" onclick="multiplicar()">Retirar</button> <!-- AL SALDO ACUTAL - DEL MONTO QUE DESEO RETIRA -->
+            <button  class="btn btn-secondary" type="button" onclick="sumar()" >Sumar</button> <!--  CALL TO ACTION SUMAR PUEDE SER DEPOSITAR -->            
+            <button  class="btn btn-secondary" type="button" onclick="restar()">Restar</button><!-- RESTAR PUEDE SER UN RETIRAR SALDO -->
+            <button  class="btn btn-secondary" type="button" onclick="multiplicar()">Multiplicar</button> 
             <button  class="btn btn-secondary" type="button" onclick="dividir()">Dividir</button>
             <br>
             <br>
