Corregido: Import y Export de JS de acuerdo a ES6

--- a/02.KataJs/10.Herencia/Ejercicio2/index.html
+++ b/02.KataJs/10.Herencia/Ejercicio2/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-
-    <script src="Cine.js"> </script>
+<!--
+    Tengo que usar type=module para poder usar import/export
+    En caso contrario obtendre el error:
+    Uncaught SyntaxError: Cannot use import statement outside a module
+-->
+    <script type="module" src="Cine.js"> </script>
 </body>
 </html>
